--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js"
   },
   "scripts": {
-  "start": "node index.js"
+  "start":  "node server/server.js"
 },
   "dependencies": {
     "cors": "^2.8.5",
